name:                haskell-multiaddr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/haskell-multiaddr#readme
license:             BSD3
license-file:        LICENSE
author:              CMCDragonkai
maintainer:          roger.qiu@polyhack.io
copyright:           Copyright: (c) 2017 Roger Qiu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Multiaddr
  build-depends:       base >= 4.7 && < 4.9
                     , iproute
                     , text
                     , filepath
                     , multihash
                     , optparse-applicative >= 0.11 && < 0.12
                     , io-streams >= 1.2  && < 1.3
                     , bytestring
                     , base32-bytestring
  default-language:    Haskell2010

executable haskell-multiaddr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-multiaddr
  default-language:    Haskell2010

test-suite haskell-multiaddr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-multiaddr
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/haskell-multiaddr
